# yahoo-finance-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  publish.yml
src/: error.rs  history.rs  lib.rs  profile.rs  streaming.rs
src/yahoo/: chart.rs  mod.rs  web_scraper.rs
tests/: history.rs
